Fixed container children spacing.

--- a/src/scss/block-patterns/_cards.scss
+++ b/src/scss/block-patterns/_cards.scss
@@ -8,6 +8,11 @@
 	align-items: stretch;
 	gap: var(--wp--preset--spacing--20);
 
+	&.is-layout-flow > * {
+		margin-block-start: 0;
+		margin-block-end: 0;
+	}
+
 	.ucsc__card-grid & {
 		height: 100%;
 	}
